docs/versioned_docs/version-0.6.0/quickstart.mdx
---
sidebar_position: 2
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import ThemedImage from '@theme/ThemedImage';

# Quickstart

In less than 5 minutes, sync data from HubSpot or Salesforce into Supaglue and query it using a unified API.

<iframe
  width="640"
  height="360"
  src="https://www.loom.com/embed/3461d96c69424e37b72bf71e5768b695?hide_owner=true&hide_share=true&hide_title=true&hideEmbedTopBar=true"
  frameborder="0"
  webkitallowfullscreen
  mozallowfullscreen
  allowfullscreen
></iframe>

## 1. Run Supaglue locally

Clone our repo, run our setup script which will create an `.env` file for this quickstart, and run the Supaglue stack locally using docker compose:

```shell
git clone -b v0.6.0 https://github.com/supaglue-labs/supaglue.git && cd supaglue
./scripts/create_quickstart_env.sh
docker compose up
```

## 2. Authenticate Supaglue example app

Click a card below to simulate a customer connecting their HubSpot or Salesforce account to your app. (Note: you'll need to have completed step 1 for this to work.)

export const IntegrationCard = ({ icon, provider, description, to }) => (
  <div className="mb-4 p-6 max-w-4xl flex flex-col border rounded-md border-slate-200 border-solid items-start">
    <img src={icon} style={{ width: 'auto', height: '36px' }} />
    <div className="font-semibold mt-4">{provider}</div>
    <div className="text-xs mt-2">{description}</div>
    <div
      onClick={() => {
        window.location.href = to;
      }}
      className="border-solid font-semibold cursor-pointer hover:bg-slate-100 mt-6 px-4 py-2 border border-slate-300 rounded-md text-xs"
    >
      Connect
    </div>
  </div>
);

<div className="grid grid-cols-2 gap-4">

<IntegrationCard
  icon="/img/salesforce.svg"
  provider="Salesforce"
  description="Sync your leads in and out of Salesforce"
  to="http://localhost:8080/oauth/connect?applicationId=a4398523-03a2-42dd-9681-c91e3e2efaf4&customerId=external-customer-salesforce&providerName=salesforce&returnUrl=https%3A%2F%2Fdocs.supaglue.com%2Fquickstart%233-query-the-supaglue-unified-api"
/>

<IntegrationCard
  icon="/img/hubspot.svg"
  provider="Hubspot"
  description="Sync your leads in and out of Hubspot"
  to="http://localhost:8080/oauth/connect?applicationId=a4398523-03a2-42dd-9681-c91e3e2efaf4&customerId=external-customer-hubspot&providerName=hubspot&returnUrl=https%3A%2F%2Fdocs.supaglue.com%2Fquickstart%233-query-the-supaglue-unified-api"
/>
</div>

This will install the Supaglue Example App in the HubSpot or Salesforce account you've connected, so that your local Supaglue instance can start syncing data.

<div className="grid grid-cols-2 gap-4 justify-items-center">

<div>
  <ThemedImage
    alt="Salesforce Example App"
    width="100%"
    sources={{
      light: '/img/salesforce_app.png',
      dark: '/img/salesforce_app.png',
    }}
  />
</div>

<div>
  <ThemedImage
    alt="Hubspot Example App"
    width="100%"
    sources={{
      light: '/img/hubspot_app.png',
      dark: '/img/hubspot_app.png',
    }}
  />
</div>

</div>

Upon successful login, you will be redirected back to this page.

:::info
To test running queries against Supaglue's API, you'll need the following:

1. A Salesforce or HubSpot app that your customers can connect their CRMs to.
2. A sample "customer" to test with.
3. The sample customer's CRM instance that you'd like to query.

For your convenience in this quickstart, we've provided Supaglue example apps and two mock customers:

- Salesforce: `external-customer-salesforce`
- HubSpot: `external-customer-hubspot`

If you don't have a sample CRM instance, you can create a free developer [HubSpot](https://app.hubspot.com/signup-hubspot/crm) or [Salesforce](https://developer.salesforce.com/signup) account.
:::

## 3. Query the Supaglue unified API

Now that you've successfully installed the Supaglue Example App in a Salesforce or HubSpot account, Supaglue will start asynchronously syncing Contacts, Leads, Accounts, and Opportunities in the background. This can take a few seconds or minutes depending on the size of the CRM instance.

Make a `GET` request to get a list of accounts:

<Tabs>
<TabItem value="salesforce" label="Salesforce" default>

```shell
curl localhost:8080/crm/v1/accounts \
  -H 'x-api-key: some-api-key' \
  -H 'x-customer-id: external-customer-salesforce' \
  -H 'x-provider-name: salesforce'
```

</TabItem>
<TabItem value="hubspot" label="HubSpot">

```shell
curl localhost:8080/crm/v1/accounts \
  -H 'x-api-key: some-api-key' \
  -H 'x-customer-id: external-customer-hubspot' \
  -H 'x-provider-name: hubspot'
```

</TabItem>
</Tabs>

Example result:

```console
{
  "results": [
    {
      "id": "4019000e-8743-4603-9a0e-69633289666d",
      "remote_id": "15134512387",
      "owner_id": "005Dn000002DY8AIAW",
      "name": "Supaglue",
      "description": "open source unified api",
      "industry": "software",
      "website": "https://supaglue.com",
      "number_of_employees": 6,
      ...
    },
    ...
  ]
}
```

## 4. Check sync status (optional)

If the curl in step 3 did not work, you can curl the `/mgmt/v1/sync-info` endpoint to check on the status of the syncs.

<Tabs>
<TabItem value="salesforce" label="Salesforce" default>

```shell
curl localhost:8080/mgmt/v1/sync-info \
  -H 'x-api-key: some-api-key' \
```

</TabItem>
<TabItem value="hubspot" label="HubSpot">

```shell
curl localhost:8080/mgmt/v1/sync-info \
  -H 'x-api-key: some-api-key' \
```

</TabItem>
</Tabs>

Example result:

```console
[
  {
    "model_name": "account",
    "last_sync_start": "2023-02-24T07:52:00.076Z",
    "next_sync_start": "2023-02-24T07:53:00.000Z",
    "status": "DONE",
    "connection_id": "1c36e9c1-1ed7-4055-ba00-41caf5b8875a",
    "application_id": "a4398523-03a2-42dd-9681-c91e3e2efaf4",
    "customer_id": "external-customer-hubspot",
    "category": "crm",
    "provider_name": "hubspot"
  },
  ...
]
```

## References

- Visit the [API Reference](/api) to view supported objects and HTTP methods.
- Visit the [Supaglue Postman Collection](https://www.postman.com/supaglue/workspace/supaglue-public/overview) to make HTTP requests against your instance of Supaglue.

## Use your own Salesforce or HubSpot App

Please reach out to us if you'd like to try Supaglue using your Salesforce Connected App or HubSpot App: [support@supaglue.com](mailto:support@supaglue.com).
